<resources>
    <string name="app_name">Practica5</string>
    <string name="welcome_text">Welcome to the Portales!</string>
    <string name="welcome_description">Taqueria Los Portales is a quick, casual restaurant.</string>
    <string name="button_start">Get Started!</string>

    <string name="name">Name</string>
    <string name="last_name">Last Name</string>
    <string name="e_mail">E-Mail</string>
    <string name="password">Password</string>
    <string name="terms">I have read and accept the terms and conditions of the Portales</string>
    <string name="sign_in">Sign In</string>

    <string name="antojitos">Antojitos</string>
    <string name="especialidades">Platillos del Mar - Seafood</string>
    <string name="combinations">Combinations</string>
    <string name="tortas">Tortas</string>
    <string name="sopas">Sopas</string>
    <string name="drinks">Drinks</string>
    <string name="our_menus">Our menu</string>
</resources>