<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        app:srcCompat="@drawable/imagen1" />

    <EditText
        android:id="@+id/name_input"
        android:layout_gravity="center"
        android:layout_width="380dp"
        android:layout_height="50dp"
        android:ems="10"
        android:inputType="text"
        android:text="@string/name" />

    <EditText
        android:id="@+id/last_name_input"
        android:layout_width="377dp"
        android:layout_gravity="center"
        android:layout_height="43dp"
        android:ems="10"
        android:inputType="text"
        android:text="@string/last_name" />

    <EditText
        android:id="@+id/password_input"
        android:layout_width="379dp"
        android:layout_gravity="center"
        android:layout_height="49dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"/>

    <EditText
        android:id="@+id/email_input"
        android:layout_width="381dp"
        android:layout_height="47dp"
        android:layout_gravity="center"
        android:ems="10"
        android:hint="@string/e_mail"

        android:inputType="textEmailAddress" />

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="377dp"
        android:layout_height="49dp"
        android:layout_gravity="center"
        android:text="@string/terms"
        android:textStyle="italic" />

    <Button
        android:id="@+id/btn_sign_in"
        android:layout_width="219dp"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:layout_marginTop="5dp"
        android:background="@drawable/round_button"
        android:text="@string/sign_in"
        android:textColor="@color/white" />

</LinearLayout>