<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MenuActivity">

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        app:srcCompat="@drawable/grupo2" />

    <Button
        android:id="@+id/btnAntojitos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/first_gradient"
        android:layout_columnWeight="1"
        android:paddingHorizontal="@dimen/menu_buttons_paddings"
        android:layout_marginRight="@dimen/menu_buttons_margin"
        android:layout_gravity="fill_horizontal"
        android:paddingVertical="@dimen/menu_buttons_paddings"
        android:text="@string/antojitos" />
    <Button
        android:id="@+id/btnEspe"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/first_gradient"
        android:layout_columnWeight="1"
        android:paddingHorizontal="@dimen/menu_buttons_paddings"
        android:layout_marginRight="@dimen/menu_buttons_margin"
        android:layout_gravity="fill_horizontal"
        android:paddingVertical="@dimen/menu_buttons_paddings"
        android:text="@string/especialidades" />
    <Button
        android:id="@+id/btnCombi"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/first_gradient"
        android:layout_columnWeight="1"
        android:paddingHorizontal="@dimen/menu_buttons_paddings"
        android:layout_marginRight="@dimen/menu_buttons_margin"
        android:layout_gravity="fill_horizontal"
        android:paddingVertical="@dimen/menu_buttons_paddings"
        android:text="@string/combinations" />
    <Button
        android:id="@+id/btnTortas"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/first_gradient"
        android:layout_columnWeight="1"
        android:paddingHorizontal="@dimen/menu_buttons_paddings"
        android:layout_marginRight="@dimen/menu_buttons_margin"
        android:layout_gravity="fill_horizontal"
        android:paddingVertical="@dimen/menu_buttons_paddings"
        android:text="@string/tortas" />
    <Button
        android:id="@+id/btnSopas"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/first_gradient"
        android:layout_columnWeight="1"
        android:paddingHorizontal="@dimen/menu_buttons_paddings"
        android:layout_marginRight="@dimen/menu_buttons_margin"
        android:layout_gravity="fill_horizontal"
        android:paddingVertical="@dimen/menu_buttons_paddings"
        android:text="@string/sopas" />
    <Button
        android:id="@+id/btnDrinks"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/first_gradient"
        android:layout_columnWeight="1"
        android:paddingHorizontal="@dimen/menu_buttons_paddings"
        android:layout_marginRight="@dimen/menu_buttons_margin"
        android:layout_gravity="fill_horizontal"
        android:paddingVertical="@dimen/menu_buttons_paddings"
        android:text="@string/drinks" />
</LinearLayout>